[package]
name = "ecdsa_fhe_int"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { git = "https://github.com/zama-ai/tfhe-rs", branch = "more-signed", features = ["integer", "x86_64-unix"] }
primitive-types = "0.12.1"
secp256k1 = "0.27.0"
rand = "0.8.5"